code/examples/parsing/pass/same-name-case-insensitive.gridlock
GRIDLOCK
Players: Amy, amy.
Grid: 3x3.
Colours: red, green.

Amy plays red at (0,0).
amy plays red at (2,0).
Amy plays green at (1,1).
amy plays red at (0,2).
Amy plays red at (2,2).
amy cannot move.
Amy wins!